antd migrate 4 to 5

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "antd-demo-ts",
+  "name": "inventory-management",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +10,8 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "antd": "^4.24.2",
+    "antd": "5.0.0",
+    "@ant-design/icons": "4.8.0",
     "axios": "^1.1.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
